--- a/templates/accounts/edit_profile.html
+++ b/templates/accounts/edit_profile.html
@@ -38,7 +38,7 @@
                             <button type="submit" class="btn btn-primary">
                                 <i class="bi bi-save"></i> Save Changes
                             </button>
-                            <a href="{% url 'profile' %}" class="btn btn-outline-secondary">
+                            <a href="{% url 'accounts:profile' %}" class="btn btn-outline-secondary">
                                 <i class="bi bi-x-circle"></i> Cancel
                             </a>
                         </div>
