--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -31,7 +31,7 @@
                         </div>
                     </form>
                     <div class="text-center mt-3">
-                        <p>Already have an account? <a href="{% url 'login' %}">Login here</a></p>
+                        <p>Already have an account? <a href="{% url 'accounts:login' %}">Login here</a></p>
                     </div>
                 </div>
             </div>
